cleanup and small error changes